kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pipeline
  labels:
    app.kubernetes.io/managed-by: Helm
