kubernetes/rollout-blue-green.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: pipeline-api-bg
  namespace: pipeline
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pipeline-api
  template:
    metadata:
      labels:
        app: pipeline-api
    spec:
      containers:
        - name: api
          image: ghcr.io/jonnytan555/e2e-pipeline:v1.0.0
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
  strategy:
    blueGreen:
      activeService: pipeline-api-active      # stable (blue) service
      previewService: pipeline-api-preview    # new version (green) service
      autoPromotionEnabled: false             # require manual promotion (or AnalysisRun)
      prePromotionAnalysis:
        templates:
          - templateName: success-rate
        args:
          - name: service-name
            value: pipeline-api-preview
      scaleDownDelaySeconds: 60               # keep old Pods for 60s after switch (fast rollback)
